--- a/apps/web/templates/watchers/show.html.erb
+++ b/apps/web/templates/watchers/show.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tbody>
     <tr>
-      <td>Description: </th>
+      <th>Description: </th>
       <td><%= watcher.description %></td>
     </tr>
     <tr>
