--- a/apps/web/templates/watchers/show.html.erb
+++ b/apps/web/templates/watchers/show.html.erb
@@ -25,6 +25,8 @@
   </tbody>
 </table>
 
+<%= refresh_button %>
+
 <h3>Log</h3>
 
 <table>
@@ -43,6 +45,3 @@
     <% end %>
   </tbody>
 </table>
-
-
-<%= javascript "delete_watcher_confirmation" %>
