Add link to /users from /watchers

--- a/apps/web/templates/watchers/show.html.erb
+++ b/apps/web/templates/watchers/show.html.erb
@@ -16,7 +16,7 @@
     </tr>
     <tr>
       <th>Email: </th>
-      <td><%= watcher.email %></td>
+      <td><%= link_to(watcher.email, routes.user_path(watcher.email)) %></td>
     </tr>
     <tr>
       <th>Created at: </th>
