Add a link to new watcher from /watchers

--- a/apps/web/templates/watchers/show.html.erb
+++ b/apps/web/templates/watchers/show.html.erb
@@ -1,5 +1,10 @@
 <h2>Show watcher</h2>
 
+<%= link_to("New watcher", routes.new_watcher_path) %>
+
+<br/>
+<br/>
+
 <table>
   <tbody>
     <tr>
@@ -25,7 +30,11 @@
   </tbody>
 </table>
 
+<br/>
+
 <%= refresh_button %>
+
+<br/>
 
 <%= delete_button %>
 
