--- a/apps/web/templates/watchers/show.html.erb
+++ b/apps/web/templates/watchers/show.html.erb
@@ -44,6 +44,7 @@
   <thead>
     <tr>
       <th>Timestamp</th>
+      <th>Status</th>
       <th>Value</th>
     </tr>
   </thead>
@@ -51,6 +52,7 @@
     <% requests.each do |request| %>
       <tr>
         <td><%= request.created_at %></td>
+        <td><%= request.status_code %></td>
         <td><%= request.value %></td>
       </tr>
     <% end %>
