Improve formatting in emails

--- a/lib/web_watcher/mailers/templates/notifier.html.erb
+++ b/lib/web_watcher/mailers/templates/notifier.html.erb
@@ -1,4 +1,10 @@
-<p>Value changed from "<%= request1.value %>" to "<%= request2.value %>".<p>
+<p>Value changed from:</p>
+
+<p>"<%= request1.value %>"</p>
+
+<p>To:</p>
+
+<p>"<%= request2.value %>"</p>
 
 <p>The change took place between <%= request1.created_at %> and <%= request2.created_at %>.</p>
 
