--- a/lib/web_watcher/mailers/templates/notifier.txt.erb
+++ b/lib/web_watcher/mailers/templates/notifier.txt.erb
@@ -1,4 +1,10 @@
-Value changed from "<%= request1.value %>" to "<%= request2.value %>".
+Value changed from:
+
+"<%= request1.value %>"
+
+To:
+
+"<%= request2.value %>"
 
 The change took place between <%= request1.created_at %> and <%= request2.created_at %>.
 
